--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -7,5 +7,47 @@
 </head>
 <body>
     <h1>Banana Bread</h1>
+    <img src="../img/bananabread.jpeg" alt="picture of banana bread" 
+    height="600" width="400">
+    <p>
+        <h2>Description</h2>
+        Banana Bread is one of the most popular choices for one 
+        looking for recipes and not without good reason! It's delicious
+        but also trivially easy to make with the correct ingredients and
+        tools!
+    </p>
+    <p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 to 3 medium (7" to 7-7/8" long) very ripe bananas, 
+                peeled (about 1 1/4 to 1 1/2 cups mashed)</li>
+            <li>1/3 cup (76g) butter, unsalted or salted, melted</li>
+            <li>1/2 teaspoon baking soda (not baking powder)</li>
+            <li>1 pinch salt</li>
+            <li>3/4 cup (150g) sugar (1/2 cup if you would like it 
+                less sweet, 1 cup if more sweet)</li>
+            <li>1 large egg, beaten</li>
+            <li>1 teaspoon vanilla extract</li>
+            <li>1 1/2 cups (205g) all-purpose flour</li>
+        </ul>
+    </p>
+    <p>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat the oven to 350°F (175°C)</li>
+            <li>Mash the bananas and add the butter</li>
+            <li>Mix in the remaining ingredients</li>
+            <li>Bake the bread</li>
+            <li>Cool and serve</li>
+        </ol>
+    </p>
+    <p>
+        <h2>Credit</h2>
+        <a href="https://www.simplyrecipes.com/recipes/banana_bread/" 
+        target="_blank" rel="noopener noreferrer">
+            Taken entirely from this website(literally everything) so massive
+            credits to Elise Bauer and Kelly Hamilton!
+        </a>
+    </p>
 </body>
 </html>
