create a "back" option

--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -49,5 +49,8 @@
             credits to Elise Bauer and Kelly Hamilton!
         </a>
     </p>
+    <p>
+        <a href="../index.html">Back</a>
+    </p>
 </body>
 </html>
