Add the two other recipe webpages and their pictures and make it linked on index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <p>
         <a href="recipes/bananabread.html">Banana Bread</a>
     </p>
+    <p>
+        <a href="recipes/chocochipmuffin.html">Chocolate Chip Cookies</a>
+    </p>
+    <p>
+        <a href="recipes/brownie.html">Brownie</a>
+    </p>
 </body>
 </html>
