--- a/recipes/chocochipmuffin.html
+++ b/recipes/chocochipmuffin.html
@@ -9,5 +9,55 @@
     <h1>Chocolate Chip Cookies</h1>
     <img src="../img/chocochipmuffin.jpeg" alt="a picture of chocolate chip cookies"
     height="500" width="400">
+    <p>
+        <h2>Description</h2>
+        Chocolate Chip Muffins are my personal favorites! The sweetness of 
+        the bread and the chocolate together makes my mouth water. The 
+        specifics are mostly up to preference but here is a basic example.
+    </p>
+    <p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 & 1/2 cups (315g) all-purpose flour</li>
+            <li>1 tbsp (13g) baking powder</li>
+            <li>1 tsp (5g) baking soda</li>
+            <li>1/2 tsp (2.5g) salt</li>
+            <li>1/2 cup (114g) unsalted butter, melted and cooled</li>
+            <li>1 cup (200g) granulated sugar</li>
+            <li>2 large eggs</li>
+            <li>1 cup (250ml) buttermilk</li>
+            <li>1 tbsp (15ml) vanilla extract</li>
+            <li>1 & 1/2 cups (275g) semi-sweet chocolate chips</li>
+        </ul>
+    </p>
+    <p>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 425°F. Spray a 12 cup muffin tray with 
+                non-stick cooking spray or line with paper liners.</li>
+            <li>In a large bowl, toss together the flour, baking powder, 
+                baking soda, salt and chocolate chips. Set aside.</li>
+            <li>In a medium bowl, whisk together the melted butter, sugar, 
+                eggs, milk and vanilla. Slowly add to the dry ingredients. 
+                Gently fold together until JUST combined.</li>
+            <li>Divide the batter into the 12 muffin cups and bake at 425°F 
+                for 5 minutes. Then reduce the oven temperature to 375°F 
+                and continue to bake for another 12-15 minutes or until 
+                a toothpick inserted into the center comes out clean. 
+                Do not overbake or the muffins will be dry. Let cool for 
+                about 5-10 minutes and enjoy warm.</li>
+        </ol>
+    </p>
+    <p>
+        <h2>Credit</h2>
+        <a href="https://www.littlesweetbaker.com/bakery-style-chocolate-chip-muffins-2/" 
+        target="_blank" rel="noopener noreferrer">
+            Taken entirely from this website(literally everything) so massive
+            credits to Lily Ernst!
+        </a>
+    </p>
+    <p>
+        <a href="../index.html">Back</a>
+    </p>
 </body>
 </html>
