Add the needed information in brownie.html including credit and a back link

--- a/recipes/brownie.html
+++ b/recipes/brownie.html
@@ -9,5 +9,43 @@
     <h1>Brownie</h1>
     <img src="../img/brownie.jpeg" alt="a picture of a brownie" height="600"
     width="600">
+    <p>
+        <h2>Description</h2>
+        Brownies are a simple yet delicious treat that are a staple in
+        most bakeries. However, it's simple to make even at home!
+    </p>
+    <p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 eggs + water</li>
+            <li>powdered sugar</li>
+            <li>unsweetened cocoa powder</li>
+            <li>oil</li>
+            <li>1/2 teaspoon of vanila extract</li>
+        </ul>
+    </p>
+    <p>
+        <h2>Steps</h2>
+        <ol>
+            <li>Mix together the dry and wet ingredients in two separate 
+                bowls</li>
+            <li>Combine the wet and dry ingredients</li>
+            <li>Pour the batter into an 8×8 inch baking pan lined with 
+                parchment paper</li>
+            <li>Transfer the pan to a 325-degree oven and bake for 40 to 
+                45 minutes</li>
+        </ol>
+    </p>
+    <p>
+        <h2>Credit</h2>
+        <a href="https://www.loveandlemons.com/brownies-recipe/" 
+        target="_blank" rel="noopener noreferrer">
+            Taken entirely from this website(literally everything) so massive
+            credits to Jeanine and Jack!
+        </a>
+    </p>
+    <p>
+        <a href="../index.html">Back</a>
+    </p>
 </body>
 </html>
