add css.style with basic centering and background color features

--- a/recipes/bananabread.html
+++ b/recipes/bananabread.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Bread</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Banana Bread</h1>
-    <img src="../img/bananabread.jpeg" alt="picture of banana bread" 
-    height="600" width="400">
+    <div class="middle">
+        <h1 class="title">Banana Bread</h1>
+        <img src="../img/bananabread.jpeg" alt="picture of banana bread" 
+        height="600" width="400">
+    </div>
     <p>
-        <h2>Description</h2>
+        <h2 class="heading">Description</h2>
         Banana Bread is one of the most popular choices for one 
         looking for recipes and not without good reason! It's delicious
         but also trivially easy to make with the correct ingredients and
         tools!
     </p>
     <p>
-        <h2>Ingredients</h2>
+        <h2 class="heading">Ingredients</h2>
         <ul>
             <li>2 to 3 medium (7" to 7-7/8" long) very ripe bananas, 
                 peeled (about 1 1/4 to 1 1/2 cups mashed)</li>
@@ -32,7 +35,7 @@
         </ul>
     </p>
     <p>
-        <h2>Steps</h2>
+        <h2 class="heading">Steps</h2>
         <ol>
             <li>Preheat the oven to 350°F (175°C)</li>
             <li>Mash the bananas and add the butter</li>
@@ -42,7 +45,7 @@
         </ol>
     </p>
     <p>
-        <h2>Credit</h2>
+        <h2 class="heading">Credit</h2>
         <a href="https://www.simplyrecipes.com/recipes/banana_bread/" 
         target="_blank" rel="noopener noreferrer">
             Taken entirely from this website(literally everything) so massive
