--- a/recipes/brownie.html
+++ b/recipes/brownie.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brownie</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Brownie</h1>
-    <img src="../img/brownie.jpeg" alt="a picture of a brownie" height="600"
-    width="600">
+    <div class="middle">
+        <h1 class="title">Brownie</h1>
+        <img src="../img/brownie.jpeg" alt="a picture of a brownie" height="600"
+        width="600" style="text-align: center;" margin="auto">
+    </div>
     <p>
-        <h2>Description</h2>
+        <h2 class="heading">Description</h2>
         Brownies are a simple yet delicious treat that are a staple in
         most bakeries. However, it's simple to make even at home!
     </p>
     <p>
-        <h2>Ingredients</h2>
+        <h2 class="heading">Ingredients</h2>
         <ul>
             <li>2 eggs + water</li>
             <li>powdered sugar</li>
@@ -25,7 +28,7 @@
         </ul>
     </p>
     <p>
-        <h2>Steps</h2>
+        <h2 class="heading">Steps</h2>
         <ol>
             <li>Mix together the dry and wet ingredients in two separate 
                 bowls</li>
@@ -37,7 +40,7 @@
         </ol>
     </p>
     <p>
-        <h2>Credit</h2>
+        <h2 class="heading">Credit</h2>
         <a href="https://www.loveandlemons.com/brownies-recipe/" 
         target="_blank" rel="noopener noreferrer">
             Taken entirely from this website(literally everything) so massive
