--- a/recipes/chocochipmuffin.html
+++ b/recipes/chocochipmuffin.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chocolate Chip Cookies</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Chocolate Chip Cookies</h1>
-    <img src="../img/chocochipmuffin.jpeg" alt="a picture of chocolate chip cookies"
-    height="500" width="400">
+    <div class="middle">
+        <h1 class="title">Chocolate Chip Cookies</h1>
+        <img src="../img/chocochipmuffin.jpeg" alt="a picture of chocolate chip cookies"
+        height="500" width="400">
+    </div>
     <p>
-        <h2>Description</h2>
+        <h2 class="heading">Description</h2>
         Chocolate Chip Muffins are my personal favorites! The sweetness of 
         the bread and the chocolate together makes my mouth water. The 
         specifics are mostly up to preference but here is a basic example.
     </p>
     <p>
-        <h2>Ingredients</h2>
+        <h2 class="heading">Ingredients</h2>
         <ul>
             <li>2 & 1/2 cups (315g) all-purpose flour</li>
             <li>1 tbsp (13g) baking powder</li>
@@ -31,7 +34,7 @@
         </ul>
     </p>
     <p>
-        <h2>Steps</h2>
+        <h2 class="heading">Steps</h2>
         <ol>
             <li>Preheat oven to 425°F. Spray a 12 cup muffin tray with 
                 non-stick cooking spray or line with paper liners.</li>
@@ -49,7 +52,7 @@
         </ol>
     </p>
     <p>
-        <h2>Credit</h2>
+        <h2 class="heading">Credit</h2>
         <a href="https://www.littlesweetbaker.com/bakery-style-chocolate-chip-muffins-2/" 
         target="_blank" rel="noopener noreferrer">
             Taken entirely from this website(literally everything) so massive
